--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "npx nodemon ./bin/www"  
+    "dev": "npx nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.1.2",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0"
+    "node-sass-middleware": "0.11.0",
+    "nodemon": "^1.17.5"
   }
 }
